Fix misaligned menu tabs
Ensure vertical alignment of menu tabs (for example “More” button) 
with link-only tabs by setting:

* `padding-top: 1.25em;` as on `div.vectorTabs span a`
* `line-height: 1.125em;` as on `div.vectorTabs ul li`

Bug: T171142

--- a/components/tabs.less
+++ b/components/tabs.less
@@ -122,6 +122,7 @@ div.vectorMenu {
 	float: left;
 	cursor: pointer;
 	position: relative;
+	line-height: 1.125em;
 }
 
 body.rtl div.vectorMenu {
@@ -147,7 +148,7 @@ div.vectorMenu h3 span {
 	display: block;
 	font-size: 0.8em;
 	padding-left: 0.7em;
-	padding-top: 1.375em;
+	padding-top: 1.25em;
 	padding-right: 20px;
 	font-weight: normal;
 	color: @menu-main-heading-color;
